src/test/deca/context/invalid/Objet/operation_onClass.des
Arithmetic operations are not allowed for type class